@@ -729,6 +729,22 @@ static R_size_t R_NodesInUse = 0;
 #define NO_FREE_NODES() (R_NodesInUse >= R_NSize)
 #define GET_FREE_NODE(s) CLASS_GET_FREE_NODE(0,s)
 
+/* versions that assume nodes are avaialble without adding a new page */
+#define CLASS_QUICK_GET_FREE_NODE(c,s) do {		\
+	SEXP __n__ = R_GenHeap[c].Free;			\
+	if (__n__ == R_GenHeap[c].New)			\
+	    error("need new page - should not happen");	\
+	R_GenHeap[c].Free = NEXT_NODE(__n__);		\
+	R_NodesInUse++;					\
+	(s) = __n__;					\
+    } while (0)
+
+#define QUICK_GET_FREE_NODE(s) CLASS_QUICK_GET_FREE_NODE(0,s)
+
+/* QUICK versions can be used if (CLASS_)NEED_NEW_PAGE returns FALSE */
+#define CLASS_NEED_NEW_PAGE(c) (R_GenHeap[c].Free == R_GenHeap[c].New)
+#define NEED_NEW_PAGE() CLASS_NEED_NEW_PAGE(0)
+
 
 /* Debugging Routines. */
 
@@ -2256,7 +2272,16 @@ SEXP cons(SEXP car, SEXP cdr)
 	if (NO_FREE_NODES())
 	    mem_err_cons();
     }
-    GET_FREE_NODE(s);
+
+    if (NEED_NEW_PAGE()) {
+	PROTECT(car);
+	PROTECT(cdr);
+	GET_FREE_NODE(s);
+	UNPROTECT(2);
+    }
+    else
+	QUICK_GET_FREE_NODE(s);
+
     s->sxpinfo = UnmarkedNodeTemplate.sxpinfo;
     INIT_REFCNT(s);
     SET_TYPEOF(s, LISTSXP);
@@ -2278,7 +2303,16 @@ SEXP CONS_NR(SEXP car, SEXP cdr)
 	if (NO_FREE_NODES())
 	    mem_err_cons();
     }
-    GET_FREE_NODE(s);
+
+    if (NEED_NEW_PAGE()) {
+	PROTECT(car);
+	PROTECT(cdr);
+	GET_FREE_NODE(s);
+	UNPROTECT(2);
+    }
+    else
+	QUICK_GET_FREE_NODE(s);
+
     s->sxpinfo = UnmarkedNodeTemplate.sxpinfo;
     INIT_REFCNT(s);
     DISABLE_REFCNT(s);
@@ -2321,7 +2355,17 @@ SEXP NewEnvironment(SEXP namelist, SEXP valuelist, SEXP rho)
 	if (NO_FREE_NODES())
 	    mem_err_cons();
     }
-    GET_FREE_NODE(newrho);
+
+    if (NEED_NEW_PAGE()) {
+	PROTECT(namelist);
+	PROTECT(valuelist);
+	PROTECT(rho);
+	GET_FREE_NODE(newrho);
+	UNPROTECT(3);
+    }
+    else
+	QUICK_GET_FREE_NODE(newrho);
+
     newrho->sxpinfo = UnmarkedNodeTemplate.sxpinfo;
     INIT_REFCNT(newrho);
     SET_TYPEOF(newrho, ENVSXP);
@@ -2353,7 +2397,16 @@ SEXP attribute_hidden mkPROMISE(SEXP expr, SEXP rho)
 	if (NO_FREE_NODES())
 	    mem_err_cons();
     }
-    GET_FREE_NODE(s);
+
+    if (NEED_NEW_PAGE()) {
+	PROTECT(expr);
+	PROTECT(rho);
+	GET_FREE_NODE(s);
+	UNPROTECT(2);
+    }
+    else
+	QUICK_GET_FREE_NODE(s);
+
     /* precaution to ensure code does not get modified via
        substitute() and the like */
     if (NAMED(expr) < 2) SET_NAMED(expr, 2);
